--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,1 +1,7 @@
-<h1>Home Page</h1>
+<div class="timer">
+   <!-- Will display the amount of time remaining in the correct format defined in timecode.js -->
+   <h1 class="md-display-3"> {{ home.clock | timecode }} </h1>
+   <!-- Defines the button styles based on the state it's in -->
+   <md-button class="md-raised" ng-show="!home.timerRunning" ng-click="home.startTimer()"> {{ home.buttonMsg }} </md-button>
+   <md-button class="md-raised" ng-show="home.timerRunning" ng-click="home.resetTimer()"> {{ home.buttonMsg }} </md-button>
+</div>
