--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 
    <!-- Will display the amount of time remaining in the correct format defined in timecode.js -->
    <h1 class="md-display-3"> {{ home.clock | timecode }} </h1>
-   <h3> Work Sessions: {{ home.sessions }} </h3>
+   <h3> Completed Work Sessions: {{ home.sessions }} </h3>
 
 <!-- Defines the button styles based on the state it's in -->
 
