--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,21 @@
 .timer {
   text-align: center;
 }
+
+#content {
+    text-align: center;
+}
+
+.x {
+    color: white;
+    text-decoration: none;
+}
+
+#sidebar {
+    color: white;
+    background-color: rgb(63,81,181);
+    position:absolute;
+    top:0;
+    left: 0;
+    bottom:0
+}
