--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,20 +1,46 @@
-<div class="timer">
+<div layout="column" style="height:500px;">
 
-   <!-- Will display the amount of time remaining in the correct format defined in timecode.js -->
-   <h1 class="md-display-3"> {{ home.clock | timecode }} </h1>
+  <section id="content">
+    <h1 class="md-display-3">Pomodoro</h1>
+  </section>
 
- <!-- Defines the button styles based on the state it's in -->
+<div>
+  <aside id="sidebar">
+      <h1 class="md-toolbar-tools">My Tasks</h1>
+  <div>
+   <form ng-submit="home.addTask()">
+      <input placeholder="Add new task" type="text" ng-model="home.newTask.$value">
+      <md-button class="md-raised" type="submit">Add Task</md-button>
+    </form>
+  <ul class="task-list">
+      <li ng-repeat="task in tasks | orderBy:'timestamp':'reverse'">
+    {{ task.$value }}
+    <a href="" class="x" ng-click="tasks.$remove(task)">X</a>
+      </li>
+   </ul>
+ </div>
+ </md-toolbar>
+</aside>
 
-   <!-- When timer is not running AND user is not on break (Start Timer / Start a new session) -->
-   <md-button class="md-raised" ng-show="!home.timerRunning && !home.onBreak" ng-click="home.startWorkTimer()"> {{ home.buttonMsg }} </md-button>
+  <div class="timer">
 
-   <!-- When timer is running AND user is not on break (Reset Timer) -->
-   <md-button class="md-raised" ng-show="home.timerRunning && !home.onBreak" ng-click="home.resetWorkTimer()"> {{ home.buttonMsg }} </md-button>
+     <!-- Will display the amount of time remaining in the correct format defined in timecode.js -->
+     <h1 class="md-display-3"> {{ home.clock | timecode }} </h1>
 
-   <!-- When timer is not running AND user is on break (Start Break) -->
-   <md-button class="md-raised" ng-show="!home.timerRunning && home.onBreak" ng-click="home.startBreakTimer()"> {{ home.buttonMsg }} </md-button>
+   <!-- Defines the button styles based on the state it's in -->
 
-   <!-- When timer is running AND user is on break (Reset Break) -->
-   <md-button class="md-raised" ng-show="home.timerRunning && home.onBreak" ng-click="home.resetBreakTimer()"> {{ home.buttonMsg }} </md-button>
+     <!-- When timer is not running AND user is not on break (Start Timer / Start a new session) -->
+     <md-button class="md-raised" ng-show="!home.timerRunning && !home.onBreak" ng-click="home.startWorkTimer()"> {{ home.buttonMsg }} </md-button>
 
+     <!-- When timer is running AND user is not on break (Reset Timer) -->
+     <md-button class="md-raised" ng-show="home.timerRunning && !home.onBreak" ng-click="home.resetWorkTimer()"> {{ home.buttonMsg }} </md-button>
+
+     <!-- When timer is not running AND user is on break (Start Break) -->
+     <md-button class="md-raised" ng-show="!home.timerRunning && home.onBreak" ng-click="home.startBreakTimer()"> {{ home.buttonMsg }} </md-button>
+
+     <!-- When timer is running AND user is on break (Reset Break) -->
+     <md-button class="md-raised" ng-show="home.timerRunning && home.onBreak" ng-click="home.resetBreakTimer()"> {{ home.buttonMsg }} </md-button>
+
+
+  </div>
 </div>
