--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,53 +1,7 @@
-.timer {
-  text-align: center;
-}
-
-#content {
-    text-align: center;
-    padding-top: 20px;
-}
-
-.md-toolbar-tools {
-  height: 50px;
-}
-
-.x {
-    color: red;
-    text-decoration: none;
-}
-
-form {
-  vertical-align: middle;
-}
-
-#sidebar {
-    color: rgb(63,81,181);
-    background-color: white ;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom:0;
-}
-
-.task-form {
-  position: relative;
-  padding: 0px 15px 10px 15px;
-  min-width: 250px;
-  margin: 0;
-}
-
-.md-button.md-small {
-  width: 30px;
-  height: 30px;
-  line-height: 20px;
-  text-align: center;
-  min-height: 20px;
-  font-size: 14px;
-  margin-left: 0px;
-}
+/* Global Navigation */
 
 .docs-navbar-header {
-  background-color: #3f51b5;
+  background-color: white;
 }
 
 app-navbar {
@@ -60,6 +14,11 @@ app-navbar {
   box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
 }
 
+.logo {
+  width: 30px;
+  vertical-align: middle;
+  padding-bottom: 4px;
+}
 
 .mat-button {
   box-sizing: border-box;
@@ -81,11 +40,183 @@ app-navbar {
   font-family: Roboto,Helvetica Neue,sans-serif;
   font-size: 16px;
   font-weight: 500;
-  color: currentColor;
+  color: #E25B64;
   height: 50px;
 }
 
-.task-dropdown {
-  text-align: left;
-  max-width: 200px;
+/* Timer */
+
+.timer-area {
+  text-align: center;
+  padding-top: 100px;
+  padding-left: 75px;
+  padding-right: 75px;
+}
+
+.work-circle {
+  -moz-border-radius: 50px/50px;
+  -webkit-border-radius: 50px 50px;
+  border-radius: 150px/150px;
+  border: solid 10px #E25B64;
+  width: 200px;
+  height: 200px;
+  position: relative;
+  display: inline-block;
+}
+
+.break-circle {
+  -moz-border-radius: 50px/50px;
+  -webkit-border-radius: 50px 50px;
+  border-radius: 150px/150px;
+  border: solid 10px #B4CA7C;
+  width: 200px;
+  height: 200px;
+  position: relative;
+  display: inline-block;
+}
+
+.md-display-3 {
+  padding-top: 30%;
+  margin: 0;
+  color: #5c5c5c;
+  padding-bottom: 15px;
+}
+
+.play-pause {
+  cursor: pointer;
+}
+
+
+/* Work and break buttons */
+
+.button-area {
+  padding-top: 20px;
+}
+
+.md-button.md-raised.startWork {
+  background-color: #E25B64;
+  color: white;
+}
+
+.md-button.md-raised.startWork:not([disabled]):hover {
+    background-color: #AF3D4D;
+}
+
+.md-button.md-raised.startBreak {
+  background-color: #B4CA7C ;
+  color: white;
+}
+
+.md-button.md-raised.startBreak:not([disabled]):hover {
+    background-color: #96A967;
+}
+
+.md-button.md-raised.resetWork {
+  background-color: white ;
+  color: #E25B64;
+}
+
+.md-button.md-raised.resetBreak {
+  background-color: white ;
+  color: #B4CA7C;
+}
+
+/* Task toggle button */
+
+.toggle {
+  position: fixed;
+  right: 0;
+  top: 50%;
+  background-color: #E25B64;
+  color: white;
+  font-family: Helvetica;
+  border: 0;
+  border-radius: 100px 0 0 100px;
+}
+
+.triangle {
+  vertical-align: middle;
+  padding-right: 6px;
+  padding-left: 2px;
+  padding-bottom: 2px;
+  height: 15px;
+}
+
+/* Sidebar */
+
+#sidebar {
+    color: white;
+    background-color: #E25B64;
+    position: absolute;
+    top: 0;
+    right: 0;
+    max-width: 320px;
+}
+
+.task-form {
+  position: relative;
+  padding: 0 0 10px 15px;
+  max-width: 287px;
+  margin: 0;
+}
+
+md-input-container {
+  width: 100%;
+}
+
+md-input-container .md-input {
+  border-color: white;
+  color: white;
+}
+
+md-input-container:not(.md-input-invalid).md-input-focused .md-input  {
+    border-color: white;
+    color: white
+}
+
+/* Add task button */
+
+.md-button.md-small {
+  width: 30px;
+  height: 30px;
+  line-height: 20px;
+  text-align: center;
+  min-height: 20px;
+  font-size: 14px;
+  margin-left: 0px;
+  background-color: white;
+  color: #E25B64;
+  left: 200px;
+}
+
+.tasks {
+  padding-left: 11px;
+}
+
+.task-item {
+  list-style: none;
+  background-color: white;
+  vertical-align: middle;
+  align-items: center;
+  margin-bottom: 5px;
+  margin-right: 15px;
+  border-radius: 3px;
+  padding: 10px;
+  border-color: #E25B64;
+  border-width: 1px;
+  color: #E25B64;
+
+}
+
+.taskItem-body {
+  background: #fff;
+  list-style: none;
+  height: 46px;
+  border-radius: 3px;
+  display: flex;
+  padding-left: 4px;
+  padding-right: 4px;
+  -webkit-box-align: center;
+  align-items: center;
+  position: relative;
 }
